@@ -1,3 +1,5 @@
+* Support partial index
+* Allow to use SQL expression for index action
 * Add cache clean timeout configuration
 * Implicit conversion to boolean in PYSON statement
 * Add domain to dictionary schema
